@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
left to right direction
class Client{
 - name
 - email
 - phoneNumber
 - sex
 - tin
 - birthDate
 - nhsNumber
 - citizenCardNumber
}

class Sample{
}

class Test{
-internalCode
-nhsCode
-description
}

class Barcode{
-code
}

class Employee{
-name
-address
-phoneNumber
-email
-employeeId
-organizationRole
-socCode
}





Sample "1..*"--"1" Test : associated >
Sample "1"--"1" Barcode : identified by >
Sample "*"--"1" Employee : registered by >
Client "1"--"1..*" Sample : provides >
Barcode "*"--"1" ExternalApi : generated by >

@enduml